migrate to Prisma

--- a/server/.env.production
+++ b/server/.env.production
@@ -1,2 +1,5 @@
-SESSION_SECRET=qwoiuweqoiuwqeoiusdalkjwqoi
-CORS_ORIGIN=https://codeponder.com
+DATABASE_URL=postgresql://nikolasburk:nikolasburk@localhost:5432/lireddit
+REDIS_URL=127.0.0.1:6379
+PORT=4000
+SESSION_SECRET=qowiueojwojfalksdjoqiwueo
+CORS_ORIGIN=http://localhost:3000
