--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -2,9 +2,9 @@
   "type": "postgres",
   "host": "localhost",
   "port": 5432,
-  "username": "postgres",
-  "password": "postgres",
-  "database": "lireddit3",
+  "username": "nikolasburk",
+  "password": "nikolasburk",
+  "database": "lireddit",
   "entities": ["dist/entities/*.js"],
   "migrations": ["dist/migrations/*.js"]
 }
