--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/cli": "2.5.1",
     "@types/connect-redis": "^0.0.14",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
@@ -31,6 +32,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "@prisma/client": "2.5.1",
     "apollo-server-express": "^2.16.1",
     "argon2": "^0.26.2",
     "connect-redis": "^5.0.0",
@@ -47,12 +49,5 @@
     "type-graphql": "^1.0.0-rc.3",
     "typeorm": "^0.2.25",
     "uuid": "^8.3.0"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
